# client-cpp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build-all.sh  build-and-run-sanity-test.sh  sonar-project.properties  wait-and-test.sh
.conan/profiles/: build_profile  ios.toolchain.cmake  (+3 more)
conan/: README.md
examples/: CMakeLists.txt  hello.cpp  main.cpp  nano_tdf_sample.py
examples/cmake/: FindTdf3Lib.cmake
scripts/: build-ios.sh  build-watchos.sh
src/: CMakeLists.txt  CMakeSources.txt  build-all copy.sh  build-all-test.sh  build-all.bat  build-all.sh  conanfile.py
src/lib/: CMakeLists.txt  CMakeLists.txt.1.1.4  CMakeSources.txt
src/lib/include/: attribute_object.h  entity_object.h  file_io_provider.h  io_provider.h  key_access_object.h  logger.h  manifest_data_model.h  nanotdf.h  nanotdf_builder.h  nanotdf_client.h  nanotdf_dataset_client.h  network_interface.h  oidc_credentials.h  policy_object.h  sdk_constants.h  stream_io_provider.h  tdf.h  tdf_assertion.h  tdf_client.h  tdf_client_base.h  tdf_client_c.h  tdf_client_c_errors.h  tdf_constants.h  tdf_constants_c.h  tdf_error_codes.h  tdf_exception.h  tdf_logging_interface.h  tdf_reader.h  tdf_storage_type.h  tdf_storage_type_c.h  tdf_writer.h  tdfbuilder.h  version.h.in
src/lib/include/crypto/: asym_decryption.h  asym_encryption.h  bytes.h  crypto_utils.h  openssl_deleters.h  rsa_key_pair.h
src/lib/include/network/: http_client_service.h  network_util.h
src/lib/include/test/: mock_network_interface.cpp  mock_network_interface.h  test_utils.cpp
src/lib/src/: attribute_object.cpp  attribute_objects_cache.cpp  attribute_objects_cache.h  benchmark.h  encryption_strategy.h  entity_object.cpp  file_io_provider.cpp  ictdf.cpp  ictdf.h  key_access.cpp  key_access.h  key_access_object.cpp  libxml2_deleters.h  logger.cpp  manifest_data_model.cpp  manifest_data_model.h  nanotdf.cpp  nanotdf_builder.cpp  nanotdf_builder_impl.h  nanotdf_client.cpp  nanotdf_dataset_client.cpp  nanotdf_impl.cpp  nanotdf_impl.h  oidc_configuration.cpp  oidc_configuration.h  oidc_credentials.cpp  oidc_service.cpp  oidc_service.h  openid_configuration.cpp  openid_configuration.h  policy_object.cpp  rca_io_provider.cpp  rca_io_provider.h  s3_io_provider.cpp  s3_io_provider.h  sdk_constants.h  splitkey_encryption.cpp  splitkey_encryption.h  stream_io_provider.cpp  stream_io_provider.h  (+30 more)
src/lib/src/crypto/: asym_decryption.cpp  asym_decryption.h  asym_encryption.cpp  asym_encryption.h  crypto_utils.cpp  ec_key_pair.cpp  ec_key_pair.h  gcm_decryption.cpp  gcm_decryption.h  gcm_encryption.cpp  gcm_encryption.h  rsa_key_pair.cpp
src/lib/src/nanotdf/: README.md  ecc_mode.cpp  ecc_mode.h  header.cpp  header.h  policy_info.cpp  policy_info.h  resource_locator.cpp  resource_locator.h  symmetric_and_payload_config.cpp  symmetric_and_payload_config.h
src/lib/src/network/: http_client_service.cpp  http_service_provider.cpp  http_service_provider.h  network_util.cpp  network_util.h
src/lib/src/zipmanager/: zip_headers.h
src/tests/: CMakeLists.txt  test_assertion.cpp  test_asym_decryption.cpp  test_asym_encryption.cpp  test_attribute_objects_cache.cpp  test_big_data.cpp  test_client_attribute.cpp  test_client_attribute.cpp.disabled  test_crypto_utils.cpp  test_decrypt_partial.cpp  test_ec_key_pair.cpp  test_ecc_mode_and_policy_config.cpp  test_entity_object.cpp  test_gcm_decryption.cpp  test_gcm_encryption.cpp  test_html_template.cpp  test_http_client_service.cpp  test_ictdf.cpp  test_input_io_provider.cpp  test_key_access.cpp  test_key_access_object.cpp  test_libarchive.cpp  test_libxml.cpp  test_logger.cpp  test_manifest_data_model.cpp  test_metadata_in_tdf.cpp  test_nano_tdf_dataset.cpp  test_nano_tdf_header.cpp  test_nano_tdf_policy_info.cpp  test_oidc_pki.cpp  test_oidc_tokenexchange.cpp  test_output_io_provider.cpp  test_policy_and_attribute_object.cpp  test_resource_locator.cpp  test_rsa_key_pair.cpp  test_splitkey_encryption.cpp  test_tdf_using_local_kas_eas.cpp  test_tdfbuilder_v2.cpp  test_virtru.cpp  test_xml_reader_writer.cpp
src/tests/data/: 10bytes.txt.tdf  client.crt  good.tdf.ictdf  invalid_html_tdf.tdf  invalid_xml_tdf.tdf  invalid_zip_tdf.tdf  old_ver_nanotdf.ntdf  sample-template.html  sample.txt  sample_with_metadata.txt.tdf  sample_without_metadata.txt.tdf  sample_xml_format.tdf  tdf-html-template.html  tdf.ictdf  valid_html_tdf.tdf  valid_nanotdf.ntdf  valid_xml_tdf.tdf  valid_zip_tdf.tdf
src/tests/data/IC-TDF/Schema/IC-EDH/: IC-EDH.xsd
src/tests/data/IC-TDF/Schema/IC-ID/: IC-ID.xsd
src/tests/data/IC-TDF/Schema/IC-TDF/: IC-TDF.xsd  Tdf_to_TdfIc.xsl
src/tests/data/IC-TDF/Schema/IC-TDF/CVEGenerated/: CVEnumTDFAppliesToState.xsd  CVEnumTDFHashAlgorithm.xsd  CVEnumTDFSignatureAlgorithm.xsd
src/tests/data/IC-TDF/Schema/RevRecall/: RevRecall_XML.xsd  SchemaGuideSchema.xsd
src/tests/data/IC-TDF/Schema/RevRecall/CVEGenerated/: CVEnumRevRecallAction.xsd  CVEnumRevRecallType.xsd
src/tests/data/IC-TDF/Schema/w3/1999/xhtml/: xhtml1-strict.xsd
src/tests/support/: mock_network_interface.cpp  mock_network_interface.h  test_utils.h
tdf-sample/: nano_tdf_sample.py
tdf-src/: CMakeLists.txt  CMakeSources.txt  conanfile.py
tdf-src/python-bindings/: CMakeLists.txt  README.md
tdf-src/python-bindings/pips/: python_module.cpp  setup.py
tdf-src/python-bindings/sample/: manual-auth-example.py  sample.py  sample.txt
tdf-src/python-bindings/setup/: __init__.py  setup.py
tdf-src/test/: CMakeLists.txt  test_asym_encryption.cpp  test_attribute_objects_cache.cpp  test_client_attribute.cpp.disabled  test_ec_key_pair.cpp  test_gcm_encryption.cpp  test_html_template.cpp  test_http_client_service.cpp  test_jwt.cpp  test_key_access.cpp  test_key_access_object.cpp  test_logger.cpp  test_nano_tdf_header.cpp  test_nano_tdf_policy_info.cpp  test_policy_and_attribute_object.cpp  test_splitkey_encryption.cpp  test_tdf_using_local_kas_eas.cpp  test_tdfbuilder_v2.cpp
tdf-src/test/data/: ca.crt  client.csr  client.key  invalid_nanotdf.ntdf  sample-txt.txt
tdf-src/test/support/: mock_network_interface.cpp
(+78 files in other folders)
